clearml/templates/gateway.yaml
# clearml-gateway-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: clearml-gateway
  namespace: curator
  labels:
    app.kubernetes.io/managed-by: "Helm"
  annotations:
    meta.helm.sh/release-name: "clearml"
    meta.helm.sh/release-namespace: "curator"
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "clearml.curator.atemkeng.eu"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: clearml-gateway
  namespace: curator
  labels:
    app.kubernetes.io/managed-by: "Helm"
  annotations:
    meta.helm.sh/release-name: "clearml"
    meta.helm.sh/release-namespace: "curator"
spec:
  hosts:
    - "clearml.curator.atemkeng.eu"
  gateways:
    - clearml-gateway
  http:
    - match:
        - uri:
            prefix: "/api"  # Assuming API calls are made to this path
      route:
        - destination:
            host: clearml-apiserver
            port:
              number: 8008
    - match:
        - uri:
            prefix: "/files"  # Adjust if there's a specific path for file server
      route:
        - destination:
            host: clearml-fileserver
            port:
              number: 8081
    - match:
        - uri:
            prefix: "/"  # Default path to the web server
      route:
        - destination:
            host: clearml-webserver
            port:
              number: 8080
